# pyside6-practice

./: designer.bat  pyproject.toml
src/pyside6_practice/: __main__.py
src/pyside6_practice/ui/: main.ui  ui_main.py
