[tool.poetry]
name = "pyside6-practice"
version = "0.1.0"
description = ""
authors = ["ScatterTemple <scatterlearning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"  # for reloadium (<=3.11) and for qt6 (>=3.11)
pyside6 = "6.7.3"  # latest 6.8.1 cannot install to 3.11


[tool.poetry.group.dev.dependencies]
qt6-tools = "^6.5.0.1.3"
reloadium = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
